# hist-utils

./: .coveragerc  .gitignore  .travis.yml  ConvertDMC2h5.py  DMCtimeparams.m  HDDcost.py  LKtest.py  Playh5.py  PlotDASC.py  PlotSolarElev.py  README.md  README.rst  RunSimulFrame.py  StricklandElectronFluxPlot.py  WhenEnd.py  WienerAurora.py  XMLparamPrint.py  airMass.py  checkRAM.m  climateConops.py  cp_parents.py  date2doy.py  eFluxGen.py  empty_file.py  findnearest.py  findstars.py  getFrameUTC.m  getRawInd.m  getRawInd.py  h5lister.py  hstxmlparse.py  matplotlibrc  memfree.m  plotSolarElev.py  plotSolarElev.py.orig  pyproject.toml  rawDMCreader.m  rawDMCreader.py  rawDMCreader.py.orig  readDASCfits.py  (+9 more)
Matlab/: DMCtimeparams.m  README.rst  expanduser.m  getRawInd.m  rawDMCreader.m  utc2rawind.m
histutils/: __init__.py  airMass.py  camclass.py  common.py  compsolar.py  cp_parents.py  diric.py  empty_file.py  findnearest.py  findstars.py  fortrandates.py  get1Dcut.py  getRawInd.py  h5imgwriter.py  h5lister.py  hstxmlparse.py  image_write_multipage.py  imageconv.py  index.py  io.py  nans.py  normframe.py  playh5.py  plotSolarElev.py  plots.py  plotsimul.py  rawDMCreader.py  readDASCfits.py  simulFrame.py  sixteen2eight.py  solis.py  timedmc.py  utils.py  vid2h5.py  walktree.py
histutils/tests/: test_all.py  test_scale.py  testframes_cam0.h5
matlab/: DMCtimeparams.m  README.md  README.rst  getFrameUTC.m  getRawInd.m  isoctave.m  rawDMCreader.m  test_self.m  utc2rawind.m
src/histutils/: findnearest.py  hstxmlparse.py  index.py  io.py  plots.py  plotsimul.py  rawDMCreader.py  solis.py
src/histutils/tests/: test_utils.py
test/: test.py
tests/: test.py  test_all.py  test_scale.py  test_utils.py  testframes.xml
