[metadata]
name = histutils
version = 1.0.0
author = Michael Hirsch, Ph.D.
author_email = scivision@noreply.users.github.com
url = https://github.com/space-physics/histutils
description = Utilities for reading HiST data, etc.
keywords =
  aurora
classifiers =
  Intended Audience :: Science/Research
  Development Status :: 4 - Beta
  Topic :: Scientific/Engineering :: Atmospheric Science
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
packages = find:
scripts =
  ConvertDMC2h5.py
  HDDcost.py
  Playh5.py
  RunSimulFrame.py
  WhenEnd.py
  WienerAurora.py
  XMLparamPrint.py
install_requires =
  python-dateutil
  numpy
  h5py

[options.extras_require]
tests =
  pytest >= 3.6
cov =
  pytest-cov
  coveralls
  flake8
  mypy
io =
  dascutils
  themisasi
  astropy
plot =
  tifffile
  matplotlib
  seaborn
  scipy
  pymap3d

[options.entry_points]
console_scripts =
