[metadata]
name = histutils
version = 1.0.1
author = Michael Hirsch, Ph.D.
author_email = scivision@noreply.users.github.com
url = https://github.com/space-physics/histutils
description = Utilities for reading HiST data, etc.
keywords =
  aurora
classifiers =
  Intended Audience :: Science/Research
  Development Status :: 4 - Beta
  Topic :: Scientific/Engineering :: Atmospheric Science
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
install_requires =
  python-dateutil
  numpy
  h5py
package_dir=
  =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest >= 3.9
  flake8
  mypy
io =
  dascutils
  themisasi
  astropy
plot =
  tifffile
  matplotlib
  seaborn
  scipy
  pymap3d
